# GmailAgent

./: .gitignore  AgentAppScript.js  Documentacao_AgentAppScript.md  INSTRUÇÕES DO AGENTE.docx  README.md  mailFilters.xml  pyproject.toml  repair-agent.bat  repair-agent.ps1  run-maintain-recent-hidden.vbs  run-maintain-recent.bat  run-maintain-recent.ps1
docs/: Documentacao_AgentAppScript.md  PythonAgentSetup.md
python/gmail_agent/: __init__.py  auth.py  autopilot.py  cleanup.py  cli.py  commands.py  config.py  filters.py  google_clients.py  inventory.py  learning.py  migration.py  reporting.py
src/: AgentAppScript.js
